@@ -1,3 +1,7 @@
+2004-05-28  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (symbol_): Check the size only if LINUX_NOEXEC_HEAPCODES.
+
 2004-05-26  Bruno Haible  <bruno@clisp.org>
 
 	* spvw.d (main): Change effect of varobjects_misaligned on heap_limit.
